# claude-udea

./: .gitignore  README.md  browser.py  pyproject.toml  requirements.txt
claude_udea/: auth.py  browser.py  cli.py  deps.py  download.py  ollama_chat.py  setup.py
