[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-udea"
version = "1.0.0"
description = "Descarga transcripciones de Zoom desde Moodle UdeA y abre Claude Code"
requires-python = ">=3.10"
dependencies = [
    "yt-dlp>=2024.1.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "questionary>=2.0.0",
    "tqdm>=4.60.0",
]

[project.scripts]
claude_udea = "claude_udea.cli:main"

[tool.setuptools.packages.find]
include = ["claude_udea*"]

[tool.setuptools.package-data]
claude_udea = ["templates/**/*.md", "templates/.claude/**/*.md"]
